app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
spec:
  selector:
    app: app-2
  ports:
    - port: 80 # Default port for image
