app-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
  labels:
    app: nginx-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "70"
    nginx.ingress.kubernetes.io/canary-by-header: "cookie"
    nginx.ingress.kubernetes.io/canary-by-header-value: "app1"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-1-svc
            port:
              number: 8080
